# hidapi

./: meson.build
linux/: meson.build
mac/: hid.c
windows/: hidapi.sln  hidtest.vcxproj  meson.build
